Fixed colors for more eye friendly readability in both light and dark modes

--- a/src/index.css
+++ b/src/index.css
@@ -48,8 +48,25 @@ body {
 @layer base{
   body{
     font-family:"Inter",sans-serif;
-    @apply bg-white text-black dark:bg-slate-900 dark:text-white
+    @apply bg-white dark:bg-slate-900 text-black dark:text-white
   }
+
+  h2{
+    @apply text-lg md:text-xl lg:text-2xl font-semibold text-black dark:text-white
+  }
+  h3{
+    @apply font-medium
+  }
+
+
+  h4{
+    @apply text-lg lg:text-xl text-black font-semibold dark:text-white 
+  }
+
+  p{
+    @apply dark:text-white text-black font-medium
+  }
+
 }
 
 /* Custom Scrollbar */
